deploy/chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
